// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddPhotoModal component should render a photo view with proper children 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <ListView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingTop": 8,
      }
    }
    dataSource={
      Object {
        "_data": Array [],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    initialListSize={3}
    onEndReached={[Function]}
    onEndReachedThreshold={2300}
    pageSize={3}
    renderHeader={[Function]}
    renderRow={[Function]}
  />
</View>
`;

exports[`AddPhotoModal component should render a selected photo count view and text 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <ListView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingTop": 8,
      }
    }
    dataSource={
      Object {
        "_data": Array [],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    initialListSize={3}
    onEndReached={[Function]}
    onEndReachedThreshold={2300}
    pageSize={3}
    renderHeader={[Function]}
    renderRow={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#acabab",
        "borderTopWidth": 1,
        "padding": 8,
      }
    }
  >
    <Text>
      1
       Photos Selected
    </Text>
  </View>
</View>
`;

exports[`AddPhotoModal component should render a selected photo view with proper children 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <ListView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingTop": 8,
      }
    }
    dataSource={
      Object {
        "_data": Array [],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    initialListSize={3}
    onEndReached={[Function]}
    onEndReachedThreshold={2300}
    pageSize={3}
    renderHeader={[Function]}
    renderRow={[Function]}
  />
</View>
`;

exports[`AddPhotoModal component should render a text when there is an error in the content 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <Text>
    test
  </Text>
</View>
`;

exports[`AddPhotoModal component should render with default props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      Object {
        "backgroundColor": "#F2F2F2",
      },
    ]
  }
>
  <ListView
    automaticallyAdjustContentInsets={false}
    contentContainerStyle={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingTop": 8,
      }
    }
    dataSource={
      Object {
        "_data": Array [],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    initialListSize={3}
    onEndReached={[Function]}
    onEndReachedThreshold={2300}
    pageSize={3}
    renderHeader={[Function]}
    renderRow={[Function]}
  />
</View>
`;
